<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragments.nechet.redacktor.update.UpdateRedacktorFragmentNechet">

    <EditText
        android:id="@+id/update_minus_redacktor_nechet"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/fragment_update_minus_redacktor_nechet"
        android:inputType="number"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/update_pk_start_redacktor_nechet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/update_pk_start_redacktor_nechet"
        app:layout_constraintTop_toBottomOf="@+id/update_pk_start_redacktor_nechet"
        tools:ignore="Autofill,HardcodedText,TextContrastCheck" />

    <EditText
        android:id="@+id/update_pk_start_redacktor_nechet"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/fragment_update_pk_start_redacktor_nechet"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/update_start_redacktor_nechet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/update_start_redacktor_nechet"
        app:layout_constraintTop_toBottomOf="@+id/update_start_redacktor_nechet"
        tools:ignore="Autofill,HardcodedText,MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/update_start_redacktor_nechet"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/fragment_update_km_start_redacktor_nechet"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <EditText
        android:id="@+id/update_plus_redacktor_nechet"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/fragment_update_plus_redacktor_nechet"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/update_minus_redacktor_nechet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/update_minus_redacktor_nechet"
        app:layout_constraintTop_toBottomOf="@+id/update_minus_redacktor_nechet"
        tools:ignore="HardcodedText,MissingConstraints,TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_update_save_redacktor_nechet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="150dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/is_update_save_redacktor_nechet"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_update_cancel_redacktor_nechet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="150dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/is_update_cancel_redacktor_nechet"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>