<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragments.chet.limitation.add.AddLimitationsFragmentChet">

    <EditText
        android:id="@+id/ed_start_limitations_chet"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/fragment_add_km_start_limitations_chet"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/ed_pk_start_limitations_chet"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/fragment_add_pk_start_limitations_chet"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/ed_start_limitations_chet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_start_limitations_chet"
        app:layout_constraintTop_toBottomOf="@+id/ed_start_limitations_chet"
        tools:ignore="Autofill,HardcodedText,MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/ed_finish_limitations_chet"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/fragment_add_km_finish_limitations_chet"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/ed_pk_start_limitations_chet"
        app:layout_constraintTop_toBottomOf="@+id/ed_pk_start_limitations_chet"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <EditText
        android:id="@+id/ed_pk_finish_limitations_chet"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/fragment_add_pk_finish_limitations_chet"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/ed_finish_limitations_chet"
        app:layout_constraintTop_toBottomOf="@+id/ed_finish_limitations_chet"
        tools:ignore="Autofill,HardcodedText,MissingConstraints,TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_save_limitations_chet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="150dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/is_save_limitations_chet"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_cancel_limitations_chet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="150dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/is_cancel_limitations_chet"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/ed_speed_limitations_chet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/fragment_add_speed_limitations_chet"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/ed_pk_finish_limitations_chet"
        app:layout_constraintTop_toBottomOf="@+id/ed_pk_finish_limitations_chet"
        tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/limitationSwitchChetAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Постоянное/Временное"
        app:layout_constraintStart_toStartOf="@+id/ed_speed_limitations_chet"
        app:layout_constraintTop_toBottomOf="@+id/ed_speed_limitations_chet"
        tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editLimitationChetSwitchAdd"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/ed_speed_limitations_chet"
        app:layout_constraintTop_toBottomOf="@+id/ed_speed_limitations_chet"
        tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>