<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.RecordingARouteFragment">

    <Button
        android:id="@+id/savePlus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="#403D3D"
        android:visibility="gone"
        android:text="+"
        android:textColorLink="#FBF7F7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toEndOf="@+id/tvDistanceRecording"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229"
        tools:ignore="HardcodedText" />

    <org.osmdroid.views.MapView
        android:id="@+id/mapRecording"
        android:layout_width="0dp"
        android:layout_height="800dp"
        android:layout_marginBottom="130dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

    </org.osmdroid.views.MapView>

    <Switch
        android:id="@+id/switch1Recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="10dp"
        android:showText="true"
        android:textColor="@color/black"
        android:textOff="@string/offSwitch"
        android:textOn="@string/onSwitch"
        android:theme="@style/MySwitch"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fCenterRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:src="@drawable/is_my_loc_center_recording"
        android:visibility="gone"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/fStartStopRecording"
        app:layout_constraintTop_toBottomOf="@+id/fStartStopRecording"
        tools:ignore="ContentDescription,KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fStartStopRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:src="@drawable/is_play_recording"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvSpeedRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:textColor="#F81944"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/fCenterRecording"
        app:layout_constraintEnd_toStartOf="@+id/fCenterRecording"
        app:layout_constraintTop_toTopOf="@+id/fCenterRecording" />

    <TextView
        android:id="@+id/tvDistanceRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="120dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvKmPkRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tvDistanceRecording"
        app:layout_constraintTop_toBottomOf="@+id/tvDistanceRecording" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="160dp"
        android:text="@string/router_name"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveMinus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="#403D3D"
        android:visibility="gone"
        android:text="-"
        android:textColorLink="#FBF7F7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvDistanceRecording"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/bRedacktor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#C74545"
        android:text="Авторедактор км"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>